--- a/QFurtoApp/www/index.html
+++ b/QFurtoApp/www/index.html
@@ -10,8 +10,10 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="App/Css/index.css" />
+        <link rel="stylesheet" type="text/css" href="App/Css/principal.css" />
         <link rel="stylesheet" type="text/css" href="Public/Css/bootstrap.css" />
 
         <title>ProjetoTeste</title>
