Desenvolvendo insercao de anuncio

--- a/QFurtoApp/www/index.html
+++ b/QFurtoApp/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
     <!--
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" type="text/css" href="App/Css/index.css" />
         <link rel="stylesheet" type="text/css" href="App/Css/principal.css" />
+        <link rel="stylesheet" type="text/css" href="App/Css/anuncio.css" />
         <link rel="stylesheet" type="text/css" href="Public/Css/bootstrap.css" />
 
         <title>ProjetoTeste</title>
@@ -29,5 +30,6 @@
         <script type="text/javascript" src="Public/Js/bootstrap.js"></script>
         <script type="text/javascript" src="App/Js/common.js"></script>
         <script type="text/javascript" src="App/Js/principal.js"></script>
+        <script type="text/javascript" src="App/Js/anuncio.js"></script>
     </body>
 </html>
